# home-loan-calculator

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  pyproject.toml
loan_calculator/: aio_appshell.py  analytics.py  application.py  components.py  delete_modal.py  loan_modal.py  plots.py  rates_projection_modal.py  shell.py
loan_calculator/assets/: historical_rates.csv  scripts.js  styles.css
loan_calculator/data_models/: __init__.py  expense.py  offer.py  project.py  rate_change.py
loan_calculator/pages/: home.py  not_found_404.py
